toolchain/internal/core/analysis/testdata/errors/naming/field_not_camel.vdl
// format:off
// @expect: E102

type User {
  userId string
}
